# ordermanager

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  pom.xml
doc/: user-manual.docx
ordermanager-backend/backtestapp/: pyproject.toml
ordermanager-backend/backtestapp/config/: batch.json  single_run.json  single_run_buy_cheaper.json  single_run_spread_threshold.json
ordermanager-backend/backtestapp/examples/: check_mike_v1_same.py
ordermanager-backend/backtestapp/live_test/: btcSpotWs.mjs  clobBook.mjs  dashboard.mjs  findBtc5mAssets.mjs  index.mjs  liveMikeV1.mjs  marketDiscovery.mjs  package-lock.json  package.json  quoteParse.mjs  strategyMikeV1.mjs
ordermanager-backend/backtestapp/pmbacktest/: __init__.py  __main__.py  cli.py  config_io.py  optimization.py
ordermanager-backend/backtestapp/pmbacktest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ordermanager-backend/backtestapp/tests/: test_batch_runner.py  test_buffered_tick_source.py  test_csv_loader.py  test_csv_timestamp_parse.py  test_equity_stride.py  test_event_loop_fill_engine.py  test_fill_engine_bid_ask.py  test_metrics.py  test_mongo_unit.py  test_normalize_run_config.py  test_portfolio_close_clamp.py  test_portfolio_overdraft.py  test_position_manager.py  test_risk_cash.py  test_round_settlement.py  test_session_smoke.py  test_upload_loader.py  test_utc5m_round_checks.py
ordermanager-backend/backtestapp/web/: .env.example  .eslintrc.cjs  README.md  craco.config.cjs  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  tsconfig.tsbuildinfo
(+686 files in other folders)
