[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmbacktest"
version = "0.1.0"
description = "Production-grade tick backtester for Polymarket-style binary markets"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
mongodb = ["pymongo>=4.6"]

[project.scripts]
pmbacktest = "pmbacktest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pmbacktest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
